[package]
name = "rust_sbml"
version = "0.4.1"
authors = ["Jorge CArrasco Muriel <carrascomurielj@gmail.com>"]
edition = "2018"
description = "A parser for SBML"
license = "MIT OR Apache-2.0"
repository = "https://github.com/carrascomj/rust_sbml"
categories = ["parser-implementations", "parsing", "science", "mathematics"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_sbml"
crate-type = ["cdylib", "rlib"]
# for cargo readme (https://github.com/livioribeiro/cargo-readme/issues/32hj) 
path = "src/lib.rs"

[dependencies]
roxmltree = "0.10.1"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_plain = "0.3.0"
mathml = "0.4.3"
pyo3 = { version = "0.12.1", optional = true }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
dependencies = ["pyo3"]
