[package]
name = "rust_sbml"
version = "0.6.1"
authors = ["Jorge Carrasco Muriel <carrascomurielj@gmail.com>"]
edition = "2018"
description = "A parser for SBML"
license = "MIT OR Apache-2.0"
repository = "https://github.com/carrascomj/rust_sbml"
categories = ["parser-implementations", "parsing", "science", "mathematics"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_sbml"
crate-type = ["cdylib", "rlib"]
# for cargo readme (https://github.com/livioribeiro/cargo-readme/issues/32hj) 
path = "src/lib.rs"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/docs-header.html" ]

[dependencies]
quick-xml = { version = "0.22.0", features = ["serialize"] }
serde = { version = "1.0", features = [ "derive" ] }
pyo3 = { version = "0.14.1", optional = true }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
dependencies = ["pyo3"]
